src/app/datatable/datatable.component.scss
@import '../../styles/variables';

.dtable-content {
/*  margin-left: 10px; */
    border: 1px solid;
    box-sizing: border-box;
    // background-color: white;
    display: grid;
    grid-template-columns: auto 380px;
    grid-template-rows: auto;

    .dtable-header {
        background-color: $accent;
        height: 40px;

        &.dtable-header-input {

            &.toolbox-open > button {
                transition: background-color, 0.5s ease;
                background-color: #e5e5e5;
                color: $accent;
            }
            .dtable-header-tools {
                color: $primary;
                background-color: $primary-foreground;
                border-bottom-left-radius: 0px;
                border-bottom-right-radius: 0px;
                margin-top: 8px;
                margin-right: 2px;
                z-index: 999;
            }
        }
    }

    .output-row {
        display: grid;
        &.no-top-row-border {
            border-top-color: $primary-foreground;
        }
        
        .output-cell {
            width: 100%;
        }

        .output-cell {
            border: 0 none;
            border-bottom: 2px solid $accent-light;
            border-right: 1px solid $accent-light;
            height: 50px;
            box-sizing: border-box;
            transition-property: background-color, border-color;
            transition-duration: 0.5s;
            transition-timing-function: ease;
            background-color: $primary-foreground;

            button.toolbox-button {
                width: 30px;
            }

            .toolbox-open {
                border: 0 none transparent;
                color: $primary;
                // transition: background-color 0.5s ease;
                background-color: rgba(0, 0, 0, .1);

                &button {
                    display: inline-block;
                    background: $accent;
                }
            }

            &.toolbox-hover {
                cursor: pointer;
            }
        }
        
        & input {
            text-indent: 15px;
        }
    }

    /deep/ .mat-drawer-container,
    .mat-drawer {
        background-color: $primary;
    }

    /deep/ .mat-drawer-inner-container {
        background-color: $accent;
    }

    /deep/ .mat-drawer-side {
        border-right: 0 none transparent;

        &.mat-drawer-end {
            border-left: 1px solid $accent;
            border-right: none;
        }
    }

    .toolbox-controls {
        display: flex;
        flex-direction: column;
        justify-content: flex-start; 
        padding-top: 40px;
        background-color: $accent;

        .toolbox-control {
            margin-bottom: 2px;
            background-color: $accent;
            border: 1px solid $accent;
            height: 50px;
            color: $primary;
            margin-left: -1px;
            margin-top: 5px;
            box-shadow: 0px -4px 2px 0px rgba(0, 0, 0, .1) !important;
        }
    }
    .output-grid {
        box-shadow: -5px 0px 5px 0px rgba(0,0,0,.3);
        background: $primary;
        z-index: 99;
    }

    .input-grid {
        display: grid;
        grid-template-columns: auto;
        grid-template-rows: 40px auto-fill;
        box-sizing: border-box;
       
        .input-rows, .header-row {
            display: grid;
            border-bottom: 2px solid $primary;
        }
        .header-row {
            grid-template-rows: 40px;
            grid-template-columns: auto 65px;
            height: 40px;
            background-color: $accent;
            .tools-header {
                height: 40px;
                background-color: $accent;

                
            }
            .tools-button {
                margin-top: 10px;
                background-color: $primary;
                color: $accent;
                border-bottom-left-radius: 0px;
                border-bottom-right-radius: 0px;
                font-size: 16px;
                box-shadow: 0px -3px 0px $primary;
                .toolbox-icon {
                    position: relative;
                    top: -5px;
                }
            }
        }
        .input-rows {
            background-color: $accent-mid;
            color: white;
            display: grid;
            grid-template-rows: 46px;
            transition-property: width;
            transition-duration: 0.5s;
            transition-timing-function: ease-out;
            width: 100%;
            .input-cell {
                padding: 5px;
                background-color: $primary-foreground;
                border: 2px solid $accent-mid;
                height: 48px;
                box-sizing: border-box;
                display: flex;
                font-weight: 400;
                cursor: pointer;
                width: 100%;
                &.ancestor-cell {
                    color: $accent-mid;
                    border: 2px solid $accent-mid;
                    background-color: $accent-light;
                }
            }
        }
        .tools-column, .tools-header {
            max-width: 65px;
            background-color: $primary;
            color: $accent-mid;
            button.tool-menu-button {
                width: 30px;
                height: 50px;
                background: $primary;
                box-shadow: 0px -4px 2px 0px rgba(0, 0, 0, .1) !important;
            }
        }        
    }
}
mat-icon.cell-icon {
    color: $accent-mid;
}

.cleanse-option-disabled {
    cursor: not-allowed;
    color: $accent-mid;
}

button.mat-menu-item {
    background-color: $accent-light;
    text-align: center;
}

/deep/ .cleanse-menu {
    background-color: $accent-light;
}

/deep/ .toolbox-tooltip.cleanse-tooltip {
    background-color: $accent-mid;
    color: $primary-foreground !important;
}

